crates/pardosa-genome/tests/compile_fail/serde_default.stderr
error: GenomeSafe: #[serde(default)] is not supported on type. #[serde(default)] is silently inert in genome format because all fields are always present on the wire. Rejected to prevent misleading annotations (ADR-029).
 --> tests/compile_fail/serde_default.rs:4:9
  |
4 | #[serde(default)]
  |         ^^^^^^^

error: cannot find attribute `serde` in this scope
 --> tests/compile_fail/serde_default.rs:4:3
  |
4 | #[serde(default)]
  |   ^^^^^
  |
  = note: `serde` is in scope, but it is a crate, not an attribute
help: `serde` is an attribute that can be used by the derive macros `Deserialize` and `Serialize`, you might be missing a `derive` attribute
  |
5 + #[derive(Deserialize, Serialize)]
6 | struct Bad {
  |
